--- a/LungTrackerWeb/src/app/app.component.css
+++ b/LungTrackerWeb/src/app/app.component.css
@@ -300,3 +300,32 @@
     flex-direction: column;
     align-items: flex-start;
   }
+
+  .menu-header-drawer {
+    width: 100%; 
+    background-color: #F6F6F6;
+    height: 70px;
+    vertical-align: middle;
+  }
+
+  .second-title-drawer {
+      margin-left: 15px;
+  }
+
+  .drawer-menu-item {
+    cursor: pointer;
+    height: 60px;
+  }
+
+  .drawer-menu-item:hover {
+      background-color: #F6F6F6;
+  }
+
+  .icon-element {
+    margin-left: 25px;
+    color: gray;
+  }
+
+  .text-element {
+    margin-left: 15px;
+  }
