--- a/LungTrackerWeb/src/app/app.component.html
+++ b/LungTrackerWeb/src/app/app.component.html
@@ -37,10 +37,11 @@
    
 
   </div> -->
+  
 
 
 <mat-drawer-container>
-  <mat-drawer #drawer mode="over" style="width: 20%; height: 100%;">
+  <mat-drawer #drawer mode="over" style="width: 20%; height: 100%; min-width: 300px;">
     <div class="menu-header-drawer" fxLayout="row" fxLayoutAlign="start center" >
       <h2 style="margin-top: 0 !important; margin-left: 20px; font-weight: lighter;">Menú Lung Tracker</h2>
       <img
@@ -70,11 +71,11 @@
     </div>
   </mat-drawer>
   <mat-drawer-content style="padding: 0; margin: 0;">
-    <div class="toolbar" role="banner" (click)="goToHome()">
+    <div class="toolbar" role="banner" >
       <button mat-button (click)="drawer.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
-      <div fxLayout="row" style="cursor: pointer;">
+      <div fxLayout="row" style="cursor: pointer;" (click)="goToHome()">
         <img
         width="30"
         alt="Lung Tracker Logo"
@@ -82,11 +83,11 @@
       <span>Lung Tracker</span>
       </div>
     </div>
-    <div style="width: 100%; height: 60px; background-color: gray;">
-
+    <div style="width: 100%; height: 60px; background-color: gray;"> </div>
+    <div style="width: 100%;">
+      <router-outlet style="width: 100%;"></router-outlet>
     </div>
     
-    <router-outlet style="width: 100%;"></router-outlet>
     <app-footer style="width: 100%;"></app-footer>
   </mat-drawer-content>
 </mat-drawer-container>
