--- a/LungTrackerWeb/src/app/home/home.component.css
+++ b/LungTrackerWeb/src/app/home/home.component.css
@@ -4,16 +4,57 @@ h1{
 }
 
 h2 {
-    margin: 50px ;
+    margin-left: 50px ;
 }
 
-p {
-    margin: 50px ;
+h3 {
+    font-size:10px;
+    font-weight: bold;
+}
+
+h4 {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    margin: 50px;
+}
+
+h5 {
+    
+    text-align: center;
     font-size: 18px;
 }
 
+h6 {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 30px;
+    text-align: center;
+}
+
+h7 {
+    font-size: 10px;
+    font-weight: bold;
+}
+
+
+p {
+    margin-left: 50px;
+    font-size: 18px;  
+}
+
+
+
 .icons {
     margin: 50px;
+}
+
+.iconos_obj {
+    margin-top: 30px;
+}
+
+.icon_1{
+    margin-top: 30px;
 }
 
 span {
@@ -22,7 +63,7 @@ span {
     color: rgb(255, 255, 255)
 }
 
-.content {
+.home {
     background-color: lavender;
 }
 
@@ -39,7 +80,20 @@ span {
     justify-content: center;
     align-items: center;
     line-height: 24px;
-  }
+}
+
+.enviar {
+    border-radius: 4px;
+    background-color: rgb(0, 0, 0);
+    font-size: 10px;
+    display: flex;
+    margin: 20px;
+    justify-content: center;
+    align-items: center;
+    padding: 12px;
+    height: 10px;
+    width: 70px;
+}
 
 .svg-icon {
     margin-right: 15px;
@@ -57,6 +111,27 @@ span {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color:black;
 }
+
+.linia {
+    margin-top: 50px;
+    
+}
+
+.paint_line {
+    background-color: rgb(186, 112, 255);
+}
+
+#checkbox {
+    margin-top: 20px;
+}
+
+var {
+    
+    font-size: 10px;
+    margin-top: 15px;
+}
+
+
 
 
 
