Add clinic details step to lung form

--- a/LungTrackerWeb/src/app/app.component.html
+++ b/LungTrackerWeb/src/app/app.component.html
@@ -83,7 +83,7 @@
       <span>Lung Tracker</span>
       </div>
     </div>
-    <div style="width: 100%; height: 60px; background-color: gray;"> </div>
+    <div style="width: 100%; height: 60px;"> </div>
     <div style="width: 100%;">
       <router-outlet style="width: 100%;"></router-outlet>
     </div>
