--- a/LungTrackerWeb/src/app/app.component.css
+++ b/LungTrackerWeb/src/app/app.component.css
@@ -309,6 +309,11 @@
     cursor: pointer;
   }
 
+  .login-button{
+    margin-left: 50px;
+
+  }
+
   .second-title-drawer {
       margin-left: 15px;
   }
