--- a/LungTrackerWeb/src/app/home/home.component.css
+++ b/LungTrackerWeb/src/app/home/home.component.css
@@ -68,10 +68,12 @@ span {
 }
 
 .card {
+    color: white;
+    font-size: large;
     border-radius: 4px;
     border: 1px solid #eee;
     background-color: rgb(0, 0, 0);
-    height: 20px;
+    height: 60px;
     width: 200px;
     margin: 50px;
     padding: 16px;
@@ -130,6 +132,8 @@ var {
     font-size: 10px;
     margin-top: 15px;
 }
+
+
 
 
 
