--- a/LungTrackerWeb/src/app/home/home.component.html
+++ b/LungTrackerWeb/src/app/home/home.component.html
@@ -11,12 +11,8 @@
           <br>Ayudanos en la recerca de  
           <br>información mediante el siguiente 
           <br>formulario:</p>
-    
-      <div class="card-container" >
-        <a class="card" target="_blank" rel="noopener" href="">
-          <span>Participa</span>
-      </a>
-      </div>
+
+      <button mat-button class="card" (click)="lungForm()">Participa</button>
 
       <h2> Consulta las xarxas sociales 
         <br>del equipo investigador!</h2>
@@ -130,7 +126,7 @@
 
 <div class="sugerencia">
   <h6>Tienes alguna sugerencia?</h6>
-  <div class="textinputs" fxLayout="column" fxLayoutAlign="space-around center">
+  <div class="textinputs" fxLayoutGap="10px" fxLayout="column" fxLayoutAlign="space-around center">
     <div class="inputs1" fxLayoutGap="10px" fxLayout="row" fxLayoutAlign="space-around center">
       <div class="name" fxLayoutGap="1px" fxLayout="column" fxLayoutAlign="space-around start">
         <h3>Nombre</h3>
@@ -140,6 +136,30 @@
         <h3>Correo electrónico</h3>
         <textarea id="email" placeholder="Correo" rows="1" cols="25" ></textarea>
        
+      </div>
+    </div>
+
+    <div class ="valoracio" fxLayoutGap="10px" fxLayout="row" fxLayoutAlign="space-around start">
+      <h3>Valora del 1 al 5 tu experiencia en la web</h3>
+      <div class="rad1" fxLayout="column" fxLayoutAlign="space-around start">
+        <input type="radio" name="option" id="radio1"  />
+        <label for="radio1">1</label><br />
+      </div>
+      <div class="rad1" fxLayout="column" fxLayoutAlign="space-around start">
+        <input type="radio" name="option" id="radio2"  />
+        <label for="radio2">2</label><br />
+      </div>
+      <div class="rad1" fxLayout="column" fxLayoutAlign="space-around start">
+        <input type="radio" name="option" id="radio3"  />
+        <label for="radio3">3</label><br />
+      </div>
+      <div class="rad1" fxLayout="column" fxLayoutAlign="space-around start">
+        <input type="radio" name="option" id="radio4"  />
+        <label for="radio4">4</label><br />
+      </div>
+      <div class="rad1" fxLayout="column" fxLayoutAlign="space-around start">
+        <input type="radio" name="option" id="radio5"  />
+        <label for="radio5">5</label><br />
       </div>
     </div>
     
