--- a/LungTrackerWeb/src/app/researcher/researcher.component.css
+++ b/LungTrackerWeb/src/app/researcher/researcher.component.css
@@ -1,7 +1,6 @@
 .table-div{
-    padding-bottom: 200px;
      background-color: rgb(201, 211, 221);
-     padding: 5%;
+     padding: 2% 5%;
 }
 
 
@@ -134,6 +133,12 @@ table {
    
    
 }
+.inline-charts{
+    display: flex;
+    text-align: center;
+    padding: 5%;
+    margin-bottom: 4%;
+}
 
 tr:nth-child(odd) {
     background-color: #e2e2e2;
@@ -142,8 +147,8 @@ tr:nth-child(even) {
     background-color: #bcaadf;
 }
 .dashchart {
-    width: 40%;
-    height: 200px;
+    width: 50%;
+    height: 250px;
 }
 
 th span {
