--- a/LungTrackerWeb/src/app/researcher/researcher.component.html
+++ b/LungTrackerWeb/src/app/researcher/researcher.component.html
@@ -3,19 +3,19 @@
     <h1>Área investigadores:</h1>
     <h3> En esta área se pueden consultar los resultados de las encuestas realizadas por pacientes de cancer de pulmón.</h3>
     <div class="inline-charts">
+        <chart *ngIf="showGraphs[1]" class="dashchart2" [type]="typeAgeRanges" [data]="dataAgeRanges" 
+        [options]="optionsAgeRanges"></chart>
         <chart *ngIf="showGraphs[0]" class="dashchart" [type]="typeLocalitzation" [data]="dataLocalitzation" 
         [options]="optionsLocalitzation"></chart>
-        <chart *ngIf="showGraphs[1]" class="dashchart" [type]="typeAgeRanges" [data]="dataAgeRanges" 
-        [options]="optionsAgeRanges"></chart>
     </div>
-  <!--  <div class="inline-charts">
-        <chart class="dashchart" [type]="typeCancerType" [data]="dataTypes" 
-        [options]="optionsTypes"></chart>
-        <chart class="dashchart" [type]="typeCancerType" [data]="dataTypes" 
-        [options]="optionsTypes"></chart>
+    <div class="inline-charts">
+        <chart *ngIf="showGraphs[0]" class="dashchart" [type]="typeLocalitzation" [data]="dataLocalitzation" 
+        [options]="optionsLocalitzation"></chart>
+       <chart *ngIf="showGraphs[0]" class="dashchart" [type]="typeLocalitzation" [data]="dataLocalitzation" 
+        [options]="optionsLocalitzation"></chart>
     </div>
-    -->
-    <h3> La siguiente tabla detalla todas las encuestas respondidas.</h3>
+    
+    <h3> La siguiente tabla detalla todas las encuestas realizadas.</h3>
     <ng-container >
         <div style="overflow-x: auto;">
             <!--Tabla con la información-->
@@ -54,7 +54,7 @@
 
                     <th>País</th>
                     <th>Residencias</th>
-
+                    <th>Exposición a tóxicos</th>
                     <th >
                         <span class="header-name">
                             <span style="margin-right: 18.5px;">
@@ -96,6 +96,20 @@
                                 <span>{{place.country}}  </span>
                             </div>
                         </td >
+                        <td>
+                            <span *ngIf="person.toxics.smoker && person.toxics.endAge==-1">
+                                Fumador desde los {{person.toxics.startAge}} años. Media de {{person.toxics.avgCigarrettes}}.
+                            </span>
+                            <span *ngIf="person.toxics.smoker && person.toxics.endAge!=-1">
+                                Exfumador desde los {{person.toxics.startAge}} años hasta los {{person.toxics.endAge}}  años. Media de {{person.toxics.avgCigarrettes}} cigarros.
+                            </span>
+                            <div *ngFor="let toxicPorduct of person.toxics.otherProducts">
+                                <span>{{toxicPorduct}}, </span>
+                            </div>
+                            <span *ngIf="person.toxics.nearbyRoad ">
+                                Vive cerca de una carretera principal.
+                            </span>
+                        </td>
                         <td > 
                             <p>Diagnosticado en {{person.tumors[0].diagnoseYear}}</p>
                             <p>Tumor de {{person.tumors[0].type}}</p>
