--- a/LungTrackerWeb/src/app/home/home.component.html
+++ b/LungTrackerWeb/src/app/home/home.component.html
@@ -141,23 +141,23 @@
 
     <div class ="valoracio" fxLayoutGap="10px" fxLayout="row" fxLayoutAlign="space-around start">
       <h3>Valora del 1 al 5 tu experiencia en la web</h3>
-      <div class="rad1" fxLayout="column" fxLayoutAlign="space-around start">
+      <div class="rad1" fxLayout="column" fxLayoutAlign="center center">
         <input type="radio" name="option" id="radio1"  />
         <label for="radio1">1</label><br />
       </div>
-      <div class="rad1" fxLayout="column" fxLayoutAlign="space-around start">
+      <div class="rad1" fxLayout="column" fxLayoutAlign="center center">
         <input type="radio" name="option" id="radio2"  />
         <label for="radio2">2</label><br />
       </div>
-      <div class="rad1" fxLayout="column" fxLayoutAlign="space-around start">
+      <div class="rad1" fxLayout="column" fxLayoutAlign="center center">
         <input type="radio" name="option" id="radio3"  />
         <label for="radio3">3</label><br />
       </div>
-      <div class="rad1" fxLayout="column" fxLayoutAlign="space-around start">
+      <div class="rad1" fxLayout="column" fxLayoutAlign="center center">
         <input type="radio" name="option" id="radio4"  />
         <label for="radio4">4</label><br />
       </div>
-      <div class="rad1" fxLayout="column" fxLayoutAlign="space-around start">
+      <div class="rad1" fxLayout="column" fxLayoutAlign="center center">
         <input type="radio" name="option" id="radio5"  />
         <label for="radio5">5</label><br />
       </div>
