Make form reactive for all type of screens

--- a/LungTrackerWeb/src/app/app.component.css
+++ b/LungTrackerWeb/src/app/app.component.css
@@ -335,3 +335,19 @@
   .text-element {
     margin-left: 15px;
   }
+
+  .wrapper {
+    min-height: 100%;
+  
+    /* Equal to height of footer */
+    /* But also accounting for potential margin-bottom of last child */
+    margin-bottom: -50px;
+  }
+
+  .footer,
+  .push {
+    height: 50px;
+  }
+
+  mat-drawer-content { height: 100% !important; }
+
