--- a/LungTrackerWeb/src/app/app.component.html
+++ b/LungTrackerWeb/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 
-<mat-drawer-container>
-  <mat-drawer #drawer mode="over" style="width: 20%; height: 100%; min-width: 300px;">
+<mat-drawer-container style="min-height: 100%">
+  <mat-drawer #drawer mode="over" style="width: 20%; height: 100%; min-width: 300px; min-height: 100%;">
     <div class="menu-header-drawer" fxLayout="row" fxLayoutAlign="start center" >
       <h2 style="margin-top: 0 !important; margin-left: 20px; font-weight: lighter;">Menú Lung Tracker</h2>
       <img
@@ -30,27 +30,30 @@
       <span class="text-element">Área investigadores</span>
     </div>
   </mat-drawer>
-  <mat-drawer-content style="padding: 0; margin: 0;">
-    <div class="toolbar" role="banner" >
-      <button mat-button (click)="drawer.toggle()">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <div fxLayout="row" style="cursor: pointer;" (click)="goToHome()">
-        <img
-        width="30"
-        alt="Lung Tracker Logo"
-        src="assets/images/lung_tracker_icon.png"  />
-      <span>Lung Tracker</span>
+  <mat-drawer-content style="padding: 0; margin: 0;display: block; height: 100%;">
+    <div class="wrapper">
+      <div class="toolbar" role="banner" >
+        <button mat-button (click)="drawer.toggle()">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <div fxLayout="row" style="cursor: pointer;" (click)="goToHome()">
+          <img
+          width="30"
+          alt="Lung Tracker Logo"
+          src="assets/images/lung_tracker_icon.png"  />
+        <span>Lung Tracker</span>
+        </div>
+        <button  class="login-button" mat-raised-button color="primary" type="submit" *ngIf="!getToken()" (click)="goToLoginButton()">Acceso área investigadores</button>
+        <button  class="login-button" mat-raised-button color="primary" type="submit" *ngIf="getToken()" (click)="logOut()">Log Out</button>
       </div>
-      <button  class="login-button" mat-raised-button color="primary" type="submit" *ngIf="!getToken()" (click)="goToLoginButton()">Acceso área investigadores</button>
-      <button  class="login-button" mat-raised-button color="primary" type="submit" *ngIf="getToken()" (click)="logOut()">Log Out</button>
+      <div style="width: 100%; height: 60px;"> </div>
+      <div style="width: 100%;">
+        <router-outlet style="width: 100%;"></router-outlet>
+      </div>
+      <div class="push"></div>
     </div>
-    <div style="width: 100%; height: 60px;"> </div>
-    <div style="width: 100%;">
-      <router-outlet style="width: 100%;"></router-outlet>
-    </div>
-
-    <app-footer style="width: 100%;"></app-footer>
+    
+    <app-footer style="width: 100%;" class="footer"></app-footer>
   </mat-drawer-content>
 </mat-drawer-container>
 
