--- a/LungTrackerWeb/src/app/lung-form/lung-form-questions/lung-form-questions.component.css
+++ b/LungTrackerWeb/src/app/lung-form/lung-form-questions/lung-form-questions.component.css
@@ -41,3 +41,9 @@
     margin-top: 20px;
     border-top: solid black 1px;
 }
+
+.wrapper {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
