--- a/LungTrackerWeb/src/app/app.component.html
+++ b/LungTrackerWeb/src/app/app.component.html
@@ -39,13 +39,17 @@
         <div fxLayout="row" style="cursor: pointer;" (click)="goToHome()">
           <img
           width="30"
+          height="28"
           alt="Lung Tracker Logo"
           src="assets/images/lung_tracker_icon.png"  />
-        <span>Lung Tracker</span>
+        <span style="width: 100px;">Lung Tracker</span>
         </div>
-        <button  class="login-button" mat-raised-button color="primary" type="submit" *ngIf="!getToken()" (click)="goToLoginButton()">Acceso área investigadores</button>
-        <button  class="login-button" mat-raised-button color="primary" type="submit" *ngIf="getToken()" (click)="logOut()">Log Out</button>
-      </div>
+        <div style="width: 100%;" fxLayout="row" fxLayoutAlign="end center" fxHide.lt-sm="true">
+          <button  class="login-button" mat-raised-button color="primary" type="submit" *ngIf="!getToken()" (click)="goToLoginButton()">Acceso área investigadores</button>
+          <button  class="login-button" mat-raised-button color="primary" type="submit" *ngIf="getToken()" (click)="logOut()">Log Out</button> 
+          <div fxFlex="5"></div>
+        </div>
+         </div>
       <div style="width: 100%; height: 60px;"> </div>
       <div style="width: 100%;">
         <router-outlet style="width: 100%;"></router-outlet>
