--- a/LungTrackerWeb/src/app/app.component.html
+++ b/LungTrackerWeb/src/app/app.component.html
@@ -15,7 +15,7 @@
       <mat-icon class="icon-element">list_alt</mat-icon>
       <span class="text-element">Formulario</span>
     </div>
-    <div fxLayout="row" fxLayoutAlign="start center" class="drawer-menu-item" (click)="printSomething()" >
+    <div fxLayout="row" fxLayoutAlign="start center" class="drawer-menu-item" (click)="goToMaps()" >
       <mat-icon class="icon-element">map</mat-icon>
       <span class="text-element">Mapas</span>
     </div>
