Rebranding of hole web page

--- a/LungTrackerWeb/src/app/home/home.component.html
+++ b/LungTrackerWeb/src/app/home/home.component.html
@@ -6,7 +6,7 @@
       <img
       width="150"
       alt="Lung Tracker Logo"
-      src="assets/images/lung_tracker_icon.png"  />
+      src="assets/images/second_lung_form-trimmy.png"  />
       <br>
       <span class="name-text mat-typography">Lung Tracker</span>
     </div>
@@ -37,11 +37,11 @@
 
   <div class = "logo" fxLayout="column" fxLayoutAlign= "center center" fxFlex="50" fxHide.lt-md="true">
     <img
-    width="150"
+    width="600px"
     alt="Lung Tracker Logo"
-    src="assets/images/lung_tracker_icon.png"  />
+    src="assets/images/second_lung_form.png"  />
     <br>
-    <span class="name-text mat-typography">Lung Tracker</span>
+    <!-- <span class="name-text mat-typography">Lung Tracker</span> -->
   </div>
 </div>
 <div class = "about_us" fxLayoutGap="10px" fxLayout = "column" fxLayoutAlign = "start start">
