--- a/LungTrackerWeb/src/app/researcher/researcher.component.html
+++ b/LungTrackerWeb/src/app/researcher/researcher.component.html
@@ -9,14 +9,16 @@
         [options]="optionsLocalitzation"></chart>
     </div>
     <div class="inline-charts">
-        <chart *ngIf="showGraphs[0]" class="dashchart" [type]="typeLocalitzation" [data]="dataLocalitzation" 
-        [options]="optionsLocalitzation"></chart>
+        <chart *ngIf="showGraphs[2]" class="dashchart" [type]="typeMutations" [data]="dataMutations" 
+        [options]="optionsMutations"></chart>
        <chart *ngIf="showGraphs[0]" class="dashchart" [type]="typeLocalitzation" [data]="dataLocalitzation" 
         [options]="optionsLocalitzation"></chart>
     </div>
     
+    
     <h3> La siguiente tabla detalla todas las encuestas realizadas.</h3>
     <ng-container >
+        
         <div style="overflow-x: auto;">
             <!--Tabla con la información-->
             <table style="box-shadow: none">
